--- a/src/app/pages/acount/acount.component.html
+++ b/src/app/pages/acount/acount.component.html
@@ -2,14 +2,14 @@
     <div class="nav">
         <a routerLink="/home"><i class='bx bxs-left-arrow-circle'></i></a>
         <img src="../../../assets/public/images/logo-rick.png" alt="logo-rick">
-        <span><i class='bx bxs-invader'></i> Ola,</span>
+        <span><i class='bx bxs-invader'></i> Olá,</span>
     </div>
 </header>
 
 <section class="acount">
     <div class="welcome">
-        <h1>Ola, {{loginObj.username}}</h1>
-        <h2>Bem vindo a nossa SPA de Rick and morty, <br> aqui voce tem acesso aos 826 personagems <br> que aparecem em toda longa</h2>
+        <h1>Olá, usuário</h1>
+        <h2>Bem vindo a nossa SPA de Rick and morty, aqui voce tem acesso aos 826 personagens <br> que aparecem em toda jornada de Rick Sanchez e Morty Smith</h2>
         <img src="../../../assets/public/images/logo-rick.png" alt="">
     </div>
 </section>
