--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -2,7 +2,7 @@
     <div class="nav">
         <a routerLink="/home"><i class='bx bxs-left-arrow-circle'></i></a>
         <img src="../../../assets/public/images/logo-rick.png" alt="logo-rick">
-        <span><i class='bx bxs-invader'></i> Ola, user</span>
+        <span><i class='bx bxs-invader'></i> Olá, user</span>
     </div>
 </header>
 <section class="details">
