--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,25 +13,25 @@
 
         <div class="icon_items">
             <ul>
-                <li class="active">
+                <li routerLink="/home" class="active">
                     <i class='bx bxs-home'></i>
-                    <a href="#">Home</a>
+                    <a>Home</a>
                 </li>
-                <li>
+                <li routerLink="/acount">
                     <i class='bx bxs-user-circle'></i>
-                    <a routerLink="/acount">Acount</a>
+                    <a>Acount</a>
                 </li>
                 <li>
                     <i class='bx bxl-github'></i>
                     <a target="_blank" href="https://github.com/KauaFelinto">GitHub</a>
                 </li>
-                <li>
+                <li routerLink="/about">
                     <i class='bx bxs-info-circle'></i>
-                    <a routerLink="/about">Info</a>
+                    <a>Info</a>
                 </li>
-                <li>
+                <li routerLink="">
                     <i class='bx bx-log-in'></i>
-                    <a routerLink="">Logout</a>
+                    <a>Logout</a>
                 </li>
             </ul>
         </div>
