--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <section class="login">
     <div class="acount">
         <img src="../../../assets/public/images/logo-rick.png" alt="">
-        <h2>Ola! digite seu nome de usuario</h2>
+        <h2>Olá! Digite seu nome de usuário</h2>
         <form action="submit">
             <input type="text" placeholder="Username" [(ngModel)]="singUpObj.username" name="text" />
             <div class="btns">
